activity->fragment data

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -20,36 +20,45 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/cardview_light_background">
+
             <EditText
+                android:id="@+id/edit_username"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/edit_username"
-                android:hint=" ID"
-                android:layout_margin="16dp" android:textColor="#ffffff" android:textColorHint="#ffffff"
-                android:background="#FF636363"
+                android:layout_margin="16dp"
+                android:background="@color/colorPrimary"
                 android:drawableLeft="@drawable/login_id"
-                android:drawablePadding="3dp" android:typeface="normal"
-                android:fontFamily="@font/nanumsquareroundr"/>
+                android:drawablePadding="3dp"
+                android:ems="10"
+                android:fontFamily="@font/nanumsquareroundr"
+                android:hint=" ID"
+                android:inputType="textPersonName"
+                android:textColor="#ffffff"
+                android:textColorHint="#ffffff"
+                android:typeface="normal" />
+
             <EditText
+                android:id="@+id/edit_password"
                 android:layout_width="match_parent"
                 android:layout_height="41dp"
-                android:ems="10"
-                android:id="@+id/edit_password"
-                android:hint=" PASSWORD"
                 android:layout_margin="16dp"
-                android:inputType="textPassword" android:background="#FF636363"
-                android:textColor="#ffffff" android:textColorHint="#ffffff"
-                android:drawableLeft="@drawable/login_pw" android:drawablePadding="3dp" android:typeface="normal"
-                android:fontFamily="@font/nanumsquareroundr"/>
+                android:background="@color/colorPrimary"
+                android:drawableLeft="@drawable/login_pw"
+                android:drawablePadding="3dp"
+                android:ems="10"
+                android:fontFamily="@font/nanumsquareroundr"
+                android:hint=" PASSWORD"
+                android:inputType="textPassword"
+                android:textColor="#ffffff"
+                android:textColorHint="#ffffff"
+                android:typeface="normal" />
 
             <Button
                 android:id="@+id/SignInOk_Btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="#FF908D88"
+                android:background="@color/colorPrimary"
                 android:fontFamily="@font/nanumsquareroundr"
                 android:gravity="center"
                 android:text="로그인"
@@ -61,7 +70,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="#FF72706C"
+                android:background="@color/colorPrimaryDark"
                 android:fontFamily="@font/nanumsquareroundr"
                 android:gravity="center"
                 android:text="회원가입"
