--- a/app/src/main/res/layout/fragment_page_two.xml
+++ b/app/src/main/res/layout/fragment_page_two.xml
@@ -6,52 +6,67 @@
     android:layout_height="match_parent"
     tools:context=".Fragment.PageTwoFragment">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="219dp"
-        android:orientation="horizontal" >
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="213dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:id="@+id/profile_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@color/colorPrimary" />
+            <LinearLayout
+                android:layout_width="213dp"
+                android:layout_height="163dp"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="163dp"
+                    android:src="@color/colorPrimary" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="228dp"
+                android:layout_height="163dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/nick_textview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="80dp"
+                    android:fontFamily="@font/nanumsquareroundr"
+                    android:gravity="center"
+                    android:text="TextView" />
+
+                <TextView
+                    android:id="@+id/id_textview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/nanumsquareroundr"
+                    android:gravity="center"
+                    android:text="TextView" />
+
+                <Button
+                    android:id="@+id/write"
+                    android:layout_width="80dp"
+                    android:layout_height="50dp"
+                    android:gravity="center"
+                    android:text="글쓰기" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="228dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/nick_textview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="80dp"
-                android:fontFamily="@font/nanumsquareroundr"
-                android:gravity="center"
-                android:text="TextView" />
-
-            <TextView
-                android:id="@+id/id_textview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/nanumsquareroundr"
-                android:gravity="center"
-                android:text="TextView" />
-
-            <Button
-                android:id="@+id/write"
-                android:layout_width="80dp"
-                android:layout_height="50dp"
-                android:gravity="center"
-                android:text="글쓰기" />
-        </LinearLayout>
-    </LinearLayout>
+            android:layout_width="match_parent"
+            android:layout_height="556dp"
+            android:layout_marginTop="8dp"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/profile_layout"
+            tools:layout_editor_absoluteX="0dp"></LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
