--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="0dp"
-        android:layout_height="545dp"
+        android:layout_height="494dp"
         android:layout_below="@id/tabs"
         android:layout_marginTop="25dp"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
@@ -34,8 +34,10 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_pager"
         tools:layout_editor_absoluteX="0dp">
 
     </com.google.android.material.tabs.TabLayout>
