--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,50 +4,73 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     tools:context=".sign.SignUpActivity">
 
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="294dp"
         android:layout_height="477dp"
-        android:background="@color/cardview_light_background"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.495"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/cardview_light_background"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.76">
+
         <EditText
+            android:id="@+id/Id"
+            android:layout_width="253dp"
             android:layout_height="58dp"
-            android:layout_width="253dp" android:hint="아이디를 입력하세요"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="35dp" android:layout_marginRight="35dp" android:id="@+id/Id"
-            android:layout_marginTop="150dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_gravity="center"
             android:layout_margin="15dp"
-            android:layout_gravity="center" android:fontFamily="@font/nanumsquareroundr"/>
+            android:layout_marginTop="150dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginRight="35dp"
+            android:fontFamily="@font/nanumsquareroundr"
+            android:hint="아이디를 입력하세요"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <EditText
-            android:layout_width="253dp"
-            android:layout_height="58dp"
-            android:inputType="textPassword"
-            android:ems="10"
             android:id="@+id/Pw"
-            android:hint="비밀번호를 입력하세요" android:layout_marginEnd="35dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="35dp" android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/Id"
-            android:layout_margin="16dp"
-            android:layout_gravity="center" android:fontFamily="@font/nanumsquareroundr"/>
-        <EditText
             android:layout_width="253dp"
             android:layout_height="58dp"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/Nickname"
-            android:hint="닉네임을 입력하세요" android:layout_marginEnd="35dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="35dp" android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/Pw"
+            android:layout_gravity="center"
             android:layout_margin="16dp"
-            android:layout_gravity="center" android:fontFamily="@font/nanumsquareroundr"/>
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginRight="35dp"
+            android:ems="10"
+            android:fontFamily="@font/nanumsquareroundr"
+            android:hint="비밀번호를 입력하세요"
+            android:inputType="textPassword"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Id" />
+
+        <EditText
+            android:id="@+id/Nickname"
+            android:layout_width="253dp"
+            android:layout_height="58dp"
+            android:layout_gravity="center"
+            android:layout_margin="16dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginRight="35dp"
+            android:ems="10"
+            android:fontFamily="@font/nanumsquareroundr"
+            android:hint="닉네임을 입력하세요"
+            android:inputType="textPersonName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Pw" />
 
         <Button
             android:id="@+id/Signup_btn"
