--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -64,11 +64,18 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <ImageView
+                    android:id="@+id/content_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:srcCompat="@android:color/background_light" />
+
                 <TextView
                     android:id="@+id/content_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="content"
                     tools:layout_editor_absoluteX="65dp"
                     tools:layout_editor_absoluteY="193dp" />
             </LinearLayout>
@@ -104,8 +111,8 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:ems="10"
-            android:inputType="text"
-            android:text="댓글" />
+            android:hint="댓글"
+            android:inputType="text" />
 
         <Button
             android:id="@+id/Ok_btn"
