--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -100,6 +100,7 @@
         android:layout_width="395dp"
         android:layout_height="65dp"
         android:layout_marginBottom="8dp"
+        android:background="@android:color/background_light"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="8dp">
