--- a/app/src/main/res/layout/fragment_page_two.xml
+++ b/app/src/main/res/layout/fragment_page_two.xml
@@ -62,12 +62,19 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/Linear_my"
             android:layout_width="match_parent"
             android:layout_height="556dp"
             android:layout_marginTop="8dp"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/profile_layout"
-            tools:layout_editor_absoluteX="0dp"></LinearLayout>
+            tools:layout_editor_absoluteX="0dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/Recycler_my"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
