--- a/app/src/main/res/layout/fragment_page_two.xml
+++ b/app/src/main/res/layout/fragment_page_two.xml
@@ -18,20 +18,20 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="213dp"
-                android:layout_height="163dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/imageView5"
-                    android:layout_width="match_parent"
+                    android:layout_width="176dp"
                     android:layout_height="163dp"
                     android:src="@color/colorPrimary" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="228dp"
-                android:layout_height="163dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <TextView
@@ -51,12 +51,26 @@
                     android:gravity="center"
                     android:text="TextView" />
 
-                <Button
-                    android:id="@+id/write"
-                    android:layout_width="80dp"
-                    android:layout_height="50dp"
-                    android:gravity="center"
-                    android:text="글쓰기" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/write"
+                        android:layout_width="114dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="글쓰기" />
+
+                    <Button
+                        android:id="@+id/logout_btn"
+                        android:layout_width="114dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="로그아웃" />
+                </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
