--- a/app/src/main/res/layout/fragment_page_three.xml
+++ b/app/src/main/res/layout/fragment_page_three.xml
@@ -29,17 +29,23 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/NoteLayout"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/NoteRecycler"
+            <LinearLayout
+                android:id="@+id/NoteLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </LinearLayout>
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/NoteRecycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+        </ScrollView>
+
     </LinearLayout>
 
 </FrameLayout>
