--- a/app/src/main/res/layout/pageone_item_list.xml
+++ b/app/src/main/res/layout/pageone_item_list.xml
@@ -29,13 +29,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginBottom="13dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:padding="5dp"
         android:text="날짜"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/nickname_listitem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="2" />
 
