--- a/app/src/main/res/layout/fragment_page_two.xml
+++ b/app/src/main/res/layout/fragment_page_two.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
-    tools:context=".Fragment.PageTwoFragment">
+    tools:context=".Fragment.PageTwo.PageTwoFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
