--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -54,21 +54,65 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingTop="10dp">
 
-            <ImageButton
-                android:id="@+id/Picture_add"
-                android:layout_width="53dp"
-                android:layout_height="46dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/title"
-                app:srcCompat="@color/colorAccent" />
+            <RadioGroup
+                android:id="@+id/weather_group"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/sun_weather"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:button="@xml/sun_button"
+                    android:scaleX="0.75"
+                    android:scaleY="0.75"
+                    android:text="" />
+
+                <RadioButton
+                    android:id="@+id/suncloud_weather"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:button="@xml/suncloud_button"
+                    android:text="" />
+
+                <RadioButton
+                    android:id="@+id/cloud_weather"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:button="@xml/cloud_button"
+                    android:text="" />
+
+                <RadioButton
+                    android:id="@+id/rain_weather"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:button="@xml/rain_button"
+                    android:text="" />
+
+                <RadioButton
+                    android:id="@+id/snow_weather"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:button="@xml/snow_button"
+                    android:text="" />
+            </RadioGroup>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
 
             <CheckBox
                 android:id="@+id/private_check"
@@ -79,21 +123,6 @@
                 android:text="비공개설정" />
 
         </LinearLayout>
-
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="203dp"
-            android:layout_height="147dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Picture_add"
-            app:srcCompat="@color/default_background_color" />
 
         <ScrollView
             android:id="@+id/scrollView2"
@@ -110,7 +139,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.505"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView6">
+            app:layout_constraintTop_toBottomOf="@+id/private_check">
 
             <LinearLayout
                 android:layout_width="match_parent"
