--- a/app/src/main/res/layout/fragment_page_two.xml
+++ b/app/src/main/res/layout/fragment_page_two.xml
@@ -36,13 +36,10 @@
                         android:gravity="center"
                         android:text="TextView" />
 
-                    <TextView
-                        android:id="@+id/id_textview"
+                    <View
+                        android:id="@+id/view3"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/nanumsquareroundr"
-                        android:gravity="center"
-                        android:text="TextView" />
+                        android:layout_height="28dp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
