--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#FF9A9E</color>
     <color name="colorPrimaryDark">#FAD0C4</color>
     <color name="colorAccent">#FCA4BF</color>
+    <color name="blue">#4facfe</color>
+    <color name="pink">#ff9a9e</color>
 </resources>
