--- a/app/src/main/res/values/spinner_array.xml
+++ b/app/src/main/res/values/spinner_array.xml
@@ -12,5 +12,11 @@
         <item>비공개글</item>
     </string-array>
 
+    <string-array name="context_spinner">
+        <item>음식</item>
+        <item>입금</item>
+        <item>도서</item>
+        <item>기타</item>
+    </string-array>
 
 </resources>
