--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -87,7 +87,7 @@
                     android:text="닉네임" />
 
                 <TextView
-                    android:id="@+id/date_text"
+                    android:id="@+id/delete_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
