--- a/app/src/main/res/layout/activity_select_main.xml
+++ b/app/src/main/res/layout/activity_select_main.xml
@@ -11,17 +11,25 @@
         android:id="@+id/main_logout_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginStart="90dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/background_light"
         android:stateListAnimator="@null"
         android:text="로그아웃"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/main_alarm_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="90dp"
+        android:layout_marginBottom="8dp"
+        android:background="@android:color/background_light"
+        android:stateListAnimator="@null"
+        android:text="알람설정"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageButton
         android:id="@+id/Cal_btn"
